# agentlog

./: .gitignore  AI_AGENT_GUIDE.md  CHANGELOG.md  FUTURE_ROADMAP.md  LICENSE  PLAN.md  README.md  SCHEMA.md  pyproject.toml
.ai/: README.md  ROADMAP.md  ROADMAP_FOCUSED.md  STRATEGY_DEEP_DIVE.md  architecture.md  coding-standards.md  context.md  patterns.md  strategy.md
.ai/agents/: README.md  claude.md  codex.md  windsurf.md
.ai/evaluation/: README.md  benchmarks.md  (+1 more)
docs/: API_REFERENCE.md  BENCHMARK_HARNESS.md  CASE_STUDIES_PUBLIC.md  CI_TEMPLATES.md  INCIDENT_REPLAY_WORKFLOW.md  MARKET_RESEARCH_2026_Q2.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QUICKSTART_RECIPES.md  ROADMAP_2026_Q2.md  SUCCESS_METRICS.md  TRACE_TO_REGRESSION_TEST.md  USAGE_EXAMPLES.md
examples/: benchmark_fix_iterations.py  beta_metrics_collector.py  demo_app.py  demo_failure_capture.py  demo_unhandled_failure.py  incident_replay_workflow.py  phase1_complete_demo.py  phase2_agent_workflow.py  phase3_schema_and_adapters.py  trace_to_regression_test.py  with_agentlog.md  without_agentlog.md
tests/: conftest.py  test_advanced.py  test_agent.py  test_analytics.py  test_api.py  test_bootstrap.py  test_buffer.py  test_compat.py  test_core.py  test_correlation.py  test_decorator.py  test_describe.py  test_failure.py  test_fixer.py  test_flow.py  test_formats.py  test_mcp.py  test_otel.py  test_outcome.py  test_priority.py  test_prune.py  test_regression.py  test_remote.py  test_schema.py  test_session.py  test_sink.py  test_tokens.py  test_trace.py  test_validate.py  test_visual.py  test_workspace.py
(+50 files in other folders)
